--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +11,23 @@
 <body>
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#000"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC67g"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A9"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
+        <a-sphere position="-0 1.3 -5" radius="1.20" color="white"></a-sphere>
+        <a-sphere position="-0 1.35 -5" radius="1.20" color="red"></a-sphere>
+        <a-cylinder position="-0 1.325 -5" radius="1.25" height="0.2" color="black"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.3" height="0.2" rotation="0 90 90" color="black"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.2" height="0.21" rotation="0 90 90" color="white"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.13" height="0.26" rotation="0 90 90" color="white"></a-cylinder>
     </a-marker>
       </a-scene>
+
+      <!-- <a-scene>
+        <a-sphere position="-0 1.3 -5" radius="1.20" color="white"></a-sphere>
+        <a-sphere position="-0 1.35 -5" radius="1.20" color="red"></a-sphere>
+        <a-cylinder position="-0 1.325 -5" radius="1.25" height="0.2" color="black"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.3" height="0.2" rotation="0 90 90" color="black"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.2" height="0.21" rotation="0 90 90" color="white"></a-cylinder>
+        <a-cylinder position="-0 1.325 -3.85" radius="0.13" height="0.26" rotation="0 90 90" color="white"></a-cylinder>
+      </a-scene>
+     -->
 </body>
 </html>
